# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@pigweed//pw_build:compatibility.bzl", "host_backend_alias")
load("@pigweed//targets/host_device_simulator:transition.bzl", "host_device_simulator_binary")
load("@pigweed//targets/rp2040:flash.bzl", "flash_rp2040")
load("//targets/rp2:binary.bzl", "rp2040_binary", "rp2350_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "production",
    srcs = ["main.cc"],
    deps = [
        "//modules/air_sensor:service",
        "//modules/board:service",
        "//modules/morse_code:encoder",
        "//modules/pubsub:service",
        "//modules/color_rotation:manager",
        "//modules/state_manager",
        "//system:pubsub",
        "//modules/proximity:manager",
        "//system:worker",
        "//system",
        ":threads",
        "@pigweed//pw_log",
        "@pigweed//pw_system:async",
        "@pigweed//pw_thread:thread",
        "//modules/sampling_thread",

        # These should be provided by pw_system:async.
        "@pigweed//pw_assert:assert_backend_impl",
        "@pigweed//pw_assert:check_backend_impl",
        "@pigweed//pw_log:backend_impl",
        "@pigweed//pw_system:extra_platform_libs",
    ],
)

cc_library(
    name = "threads_headers",
    hdrs = ["threads.h"],
    deps = ["@pigweed//pw_thread:thread"],
)

label_flag(
    name = "threads",
    build_setting_default = ":unspecified_backend",
)

host_backend_alias(
    name = "unspecified_backend",
    backend = "//targets/host:production_app_threads",
)

# Create an rp2040 flashable ELF
rp2040_binary(
    name = "rp2040.elf",
    binary = ":production",
)

# Create an rp2350 flashable ELF
rp2350_binary(
    name = "rp2350.elf",
    binary = ":production",
)

# Create a host binary using the Pigweed upstream pw_system host_device_simulator.
host_device_simulator_binary(
    name = "simulator",
    binary = ":production",
)

SIMULATOR_CONSOLE_COMMON_ARGS = [
    # This arg lets us skip manual port selection.
    "--socket",
    "default",
    "--config-file",
    "$(rootpath //:pw_console_config)",
]

# Connect to a running host_device_simulator_binary with:
#   bazel run //apps/production:simulator_console
native_binary(
    name = "simulator_console",
    src = "//tools:console",
    args = SIMULATOR_CONSOLE_COMMON_ARGS,
    data = [
        "//:pw_console_config",
    ],
)

native_binary(
    name = "simulator_webconsole",
    src = "//tools:console",
    args = SIMULATOR_CONSOLE_COMMON_ARGS + ["--browser"],
    data = [
        "//:pw_console_config",
    ],
)

RP2040_CONSOLE_COMMON_ARGS = [
    "-b",
    "115200",
    "--token-databases",
    "$(rootpath //apps/production:rp2040.elf)",
    "--config-file",
    "$(rootpath //:pw_console_config)",
]

RP2350_CONSOLE_COMMON_ARGS = [
    a.replace("rp2040", "rp2350") for a in RP2040_CONSOLE_COMMON_ARGS
]

native_binary(
    name = "rp2040_console",
    src = "//tools:console",
    args = RP2040_CONSOLE_COMMON_ARGS,
    data = [
        ":rp2040.elf",
        "//:pw_console_config",
    ],
)

native_binary(
    name = "rp2350_console",
    src = "//tools:console",
    args = RP2350_CONSOLE_COMMON_ARGS,
    data = [
        ":rp2350.elf",
        "//:pw_console_config",
    ],
)

native_binary(
    name = "rp2040_webconsole",
    src = "//tools:console",
    args = RP2040_CONSOLE_COMMON_ARGS + ["--browser"],
    data = [
        ":rp2040.elf",
        "//:pw_console_config",
    ],
)

native_binary(
    name = "rp2350_webconsole",
    src = "//tools:console",
    args = RP2350_CONSOLE_COMMON_ARGS + ["--browser"],
    data = [
        ":rp2350.elf",
        "//:pw_console_config",
    ],
)

native_binary(
    name = "rp2040_air_measure",
    src = "//tools:air_measure",
    args = [
        "--token-databases",
        "$(rootpath //apps/production:rp2040.elf)",
    ],
    data = [
        ":rp2040.elf",
    ],
)

native_binary(
    name = "rp2350_air_measure",
    src = "//tools:air_measure",
    args = [
        "--token-databases",
        "$(rootpath //apps/production:rp2350.elf)",
    ],
    data = [
        ":rp2350.elf",
    ],
)

alias(
    name = "flash",
    actual = ":flash_rp2040",
)

flash_rp2040(
    name = "flash_rp2040",
    rp2040_binary = "rp2040.elf",
)

flash_rp2040(
    name = "flash_rp2350",
    rp2040_binary = "rp2350.elf",
)
