# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load(
    "@pigweed//pw_protobuf_compiler:pw_proto_library.bzl",
    "pw_proto_filegroup",
    "pwpb_proto_library",
    "pwpb_rpc_proto_library",
)
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

pw_proto_filegroup(
    name = "rp2040_system_proto_and_options",
    srcs = ["rp2040_system.proto"],
    options_files = ["rp2040_system.options"],
)

proto_library(
    name = "rp2040_system_proto",
    srcs = [":rp2040_system_proto_and_options"],
    import_prefix = "rp2040_system",
    strip_import_prefix = "/libraries/rpc",
    deps = [
        "@pigweed//pw_protobuf:common_proto",
    ],
)

pwpb_proto_library(
    name = "rp2040_system_pwpb",
    deps = [":rp2040_system_proto"],
)

pwpb_rpc_proto_library(
    name = "rp2040_system_pwpb_rpc",
    deps = [":rp2040_system_proto"],
    pwpb_proto_library_deps = [":rp2040_system_pwpb"],
)

py_proto_library(
    name = "rp2040_system_protos_py_pb2",
    deps = [":rp2040_system_proto"],
)

cc_library(
    name = "rp2040_system_service",
    hdrs = ["public/rp2040_system/rp2040_system_service_pwpb.h"],
    includes = ["public"],
    deps = [
        ":rp2040_system_pwpb_rpc",
        "@pico-sdk//src/rp2_common/hardware_adc",
        "@pico-sdk//src/rp2_common/pico_bootrom",
    ],
)
