# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@pigweed//pw_build:pigweed.bzl", "pw_cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "manager",
    srcs = ["manager.cc"],
    hdrs = ["manager.h"],
    deps = [
        "//modules/lerp",
        "//modules/pubsub:events",
        "@pigweed//pw_assert",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_chrono:system_timer",
        "@pigweed//pw_function",
        "@pigweed//pw_log",
        "@pigweed//pw_preprocessor",
        "@pigweed//pw_span",
        "@pigweed//pw_sync:interrupt_spin_lock",
        "@pigweed//pw_work_queue",
    ],
)

pw_cc_test(
    name = "manager_test",
    srcs = ["manager_test.cc"],
    deps = [
        ":manager",
        "//modules/worker:test_worker",
        "@pigweed//pw_digital_io",
        "@pigweed//pw_sync:timed_thread_notification",
        "@pigweed//pw_thread:sleep",
        "@pigweed//pw_unit_test",
    ],
)
