# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@pigweed//pw_build:compatibility.bzl", "host_backend_alias")
load("@pigweed//pw_build:pigweed.bzl", "pw_facade")

package(default_visibility = ["//visibility:public"])

pw_facade(
    name = "indicators",
    srcs = ["system_led.cc"],
    hdrs = ["system_led.h"],
    backend = ":backend",
)

label_flag(
    name = "backend",
    build_setting_default = ":unspecified_backend",
)

host_backend_alias(
    name = "unspecified_backend",
    backend = ":indicators_host",
)

cc_library(
    name = "indicators_host",
    srcs = ["system_led_host.cc"],
    deps = [
        ":indicators.facade",
        "@pigweed//pw_log",
    ],
    # TODO: https://pwbug.dev/348008794 - Mark incompatible_with_mcu once
    # that's implemented.
)

cc_library(
    name = "indicators_rp2040",
    srcs = ["system_led_rp2040.cc"],
    deps = [
        ":indicators.facade",
        "//drivers:system",
        "@pico-sdk//src/common/pico_stdlib:pico_stdlib",
        "@pico-sdk//src/rp2_common/hardware_gpio:hardware_gpio",
    ],
)
