# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "monochrome_led",
    srcs = ["monochrome_led.cc"],
    hdrs = ["monochrome_led.h"],
    deps = [
        "//modules/pwm:digital_out",
        "@pigweed//pw_digital_io",
    ],
)

cc_library(
    name = "monochrome_led_fake",
    hdrs = ["monochrome_led_fake.h"],
    deps = [
        ":digital_io_fake",
        ":monochrome_led",
        "//modules/pwm:digital_out_fake",
    ],
)

cc_library(
    name = "digital_io_fake",
    srcs = ["digital_io_fake.cc"],
    hdrs = ["digital_io_fake.h"],
    implementation_deps = [
        "@pigweed//pw_log",
    ],
    deps = [
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_containers:inline_deque",
        "@pigweed//pw_digital_io",
        "@pigweed//pw_result",
    ],
)

cc_library(
    name = "polychrome_led",
    srcs = ["polychrome_led.cc"],
    hdrs = ["polychrome_led.h"],
    deps = [
        "//modules/pwm:digital_out",
    ],
)

cc_library(
    name = "polychrome_led_fake",
    hdrs = ["polychrome_led_fake.h"],
    deps = [
        ":polychrome_led",
    ],
)
