# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load(
    "@pigweed//pw_build:pigweed.bzl",
    "pw_cc_test",
)
load(
    "@pigweed//pw_protobuf_compiler:pw_proto_library.bzl",
    "nanopb_proto_library",
    "nanopb_rpc_proto_library",
)
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pubsub",
    hdrs = ["pubsub.h"],
    deps = [
        "//modules/worker",
        "@pigweed//pw_containers:inline_deque",
        "@pigweed//pw_function",
        "@pigweed//pw_sync:interrupt_spin_lock",
        "@pigweed//pw_sync:lock_annotations",
    ],
)

cc_library(
    name = "events",
    hdrs = ["pubsub_events.h"],
    deps = [":pubsub"],
)

pw_cc_test(
    name = "pubsub_test",
    srcs = ["pubsub_test.cc"],
    # TODO: https://pwbug.dev/352163490 - Fails in CI
    tags = ["manual"],
    deps = [
        ":events",
        ":pubsub",
        "//modules/worker:test_worker",
        "@pigweed//pw_sync:timed_thread_notification",
    ],
)

cc_library(
    name = "service",
    srcs = ["service.cc"],
    hdrs = ["service.h"],
    implementation_deps = [
        "@pigweed//pw_assert:check",
        "@pigweed//pw_log",
        "@pigweed//pw_string",
    ],
    deps = [
        ":events",
        ":nanopb_rpc",
        "//modules/state_manager",
    ],
)

pw_cc_test(
    name = "service_test",
    srcs = ["service_test.cc"],
    deps = [
        ":events",
        ":service",
        "//modules/worker:test_worker",
        "@pigweed//pw_rpc:test_helpers",
        "@pigweed//pw_rpc/nanopb:client_server_testing",
        "@pigweed//pw_sync:timed_thread_notification",
    ],
)

proto_library(
    name = "proto",
    srcs = ["pubsub.proto"],
    import_prefix = "pubsub_pb",
    strip_import_prefix = "/modules/pubsub",
    deps = [
        "//modules/morse_code:proto",
        "//modules/state_manager:proto",
        "@pigweed//pw_protobuf:common_proto",
    ],
)

nanopb_proto_library(
    name = "nanopb",
    deps = [":proto"],
)

nanopb_rpc_proto_library(
    name = "nanopb_rpc",
    nanopb_proto_library_deps = [":nanopb"],
    deps = [":proto"],
)

py_proto_library(
    name = "py_pb2",
    deps = [":proto"],
)
