# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@pigweed//pw_build:compatibility.bzl", "host_backend_alias")
load("@pigweed//pw_build:pigweed.bzl", "pw_facade")

package(default_visibility = ["//visibility:public"])

pw_facade(
    name = "pw_board_led",
    hdrs = ["public/pw_board_led/led.h"],
    backend = ":backend",
    includes = ["public"],
)

label_flag(
    name = "backend",
    build_setting_default = ":unspecified_backend",
)

host_backend_alias(
    name = "unspecified_backend",
    backend = "//modules/pw_board_led_host",
)
